--- a/freshock/src/index.html
+++ b/freshock/src/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 @@include('html/_head.htm',{
-"title":"HomePage"
+"title":"Freshock"
 })
 
 <body>
 	<div class="wrapper">
 		@@include('html/_header.htm',{})
 		<main class="page">
-			<p>
-				Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem hic excepturi est, nemo animi facilis! Est suscipit commodi ex fuga voluptatibus nisi sequi unde natus, odit odio ut id. Enim.
-			</p>
+
 		</main>
 		@@include('html/_footer.htm',{})
 	</div>
