--- a/freshock/html/_common.html
+++ b/freshock/html/_common.html
@@ -9,3 +9,26 @@
 <div class="title">
 	<h2 class="title__value">Топовые товары</h2>
 </div>
+
+
+<div class="main-page__controls">
+	<button type="button" class="main-page__arrow main-page__arrow_left _icon-icon-arrow-right"></button>
+	<button type="button" class="main-page__arrow main-page__arrow_right _icon-icon-arrow-right"></button>
+</div>
+
+<div class="main-page__slider swiper">
+	<div class="main-page__wrapper swiper-wrapper">
+		<div class="main-page__slide swiper-slide" style="background-image: url('img/main-page/carrot.jpg');">
+			<div class="main-page__container">
+				<h3 class="main-page__text">СВЕЖАЧОК ВАМ в ХАТУ</h3>
+				<h3 class="main-page__discount">Скидка -50%</h3>
+				<p class="main-page__text">Только с 7 по 13 июля скидка на сезонные фрукты и овощи до 50%. Торопитесь!</p>
+				<button class="button button_green" type="button">Купить сейчас</button>
+			</div>
+		</div>
+
+	</div>
+	<div class="pagination">
+		<button type="button" class="swiper-pagination slider-quality__pagging"></button>
+	</div>
+</div>
