feat: footer and adaptive

--- a/freshock/src/html/_common.html
+++ b/freshock/src/html/_common.html
@@ -10,7 +10,7 @@
 	<h2 class="title__value">Топовые товары</h2>
 </div>
 
-
+<!-- SWIPER -->
 <div class="main-page__controls">
 	<button type="button" class="main-page__arrow main-page__arrow_left _icon-icon-arrow-right"></button>
 	<button type="button" class="main-page__arrow main-page__arrow_right _icon-icon-arrow-right"></button>
@@ -32,3 +32,4 @@
 		<button type="button" class="swiper-pagination slider-quality__pagging"></button>
 	</div>
 </div>
+<!--  -->
