--- a/freshock/src/html/_header.htm
+++ b/freshock/src/html/_header.htm
@@ -8,7 +8,7 @@
 				</div>
 				<div class="menu__lists">
 					<ul class="menu__list">
-						<li class="menu__item"><a href="#" class="menu__link menu__link_del"><span>АдРЕС И ВРЕМЯ ДОСТАВКИ</span></a></li>
+						<li class="menu__item"><a href="#" class="menu__link menu__link_del"><span>АДРЕС И ВРЕМЯ ДОСТАВКИ</span></a></li>
 						<li class="menu__item"><a href="#" class="menu__link menu__link_tel"><span>ГОРЯЧАЯ ЛИНИЯ 24/7</span></a></li>
 					</ul>
 				</div>
@@ -112,7 +112,7 @@
 				</div>
 
 				<div class="main-header__search">
-					<input autocomplete="off" type="text" name="form[]" data-error="Ошибка" placeholder="Найти в магазине ..." class="input">
+					<input autocomplete="off" type="text" placeholder="Найти в магазине ..." class="input">
 					<button class="button button_dark" type="button">ПОИСК</button>
 				</div>
 
