--- a/freshock/src/index.html
+++ b/freshock/src/index.html
@@ -128,7 +128,7 @@
 									<!-- HOVER SEARCH -->
 									<div href="#" class="body__picture">
 										<a class="body__picyure-link" href="#">
-											<img src="@img/main-page/pineapple.jpg" alt="Ананас">
+											<img src="@img/main-page/pineapple.jpg" height="215" width="298" alt="Ананас">
 										</a>
 										<div class="body__overlay">
 											<a href="#" class="body__search _icon-icon-search"></a>
@@ -166,7 +166,7 @@
 									<!-- HOVER SEARCH -->
 									<div href="#" class="body__picture">
 										<a class="body__picyure-link" href="#">
-											<img src="@img/main-page/lemon.jpg" alt="Лимон">
+											<img src="@img/main-page/lemon.jpg" height="215" width="298" alt="Лимон">
 										</a>
 										<div class="body__overlay">
 											<a href="#" class="body__search _icon-icon-search"></a>
@@ -204,7 +204,7 @@
 									<!-- HOVER SEARCH -->
 									<div href="#" class="body__picture">
 										<a class="body__picyure-link" href="#">
-											<img src="@img/main-page/pitahaya.jpg" alt="Питахайя красная ">
+											<img src="@img/main-page/pitahaya.jpg" height="215" width="298" alt="Питахайя красная ">
 										</a>
 										<div class="body__overlay">
 											<a href="#" class="body__search _icon-icon-search"></a>
@@ -242,7 +242,7 @@
 									<!-- HOVER SEARCH -->
 									<div href="#" class="body__picture">
 										<a class="body__picyure-link" href="#">
-											<img src="@img/main-page/ketchup.jpg" alt="Кетчуп томатный детский">
+											<img src="@img/main-page/ketchup.jpg" height="215" width="298" alt="Кетчуп томатный детский">
 										</a>
 										<div class="body__overlay">
 											<a href="#" class="body__search _icon-icon-search"></a>
@@ -280,7 +280,7 @@
 									<!-- HOVER SEARCH -->
 									<div href="#" class="body__picture">
 										<a class="body__picyure-link" href="#">
-											<img src="@img/main-page/carot-card.jpg" alt="Морковь молодая ">
+											<img src="@img/main-page/carot-card.jpg" height="215" width="298" alt="Морковь молодая ">
 										</a>
 										<div class="body__overlay">
 											<a href="#" class="body__search _icon-icon-search"></a>
@@ -318,7 +318,7 @@
 									<!-- HOVER SEARCH -->
 									<div href="#" class="body__picture">
 										<a class="body__picyure-link" href="#">
-											<img src="@img/main-page/beverages.jpg" alt="Напиток сокосодержащий">
+											<img src="@img/main-page/beverages.jpg" height="215" width="298" alt="Напиток сокосодержащий">
 										</a>
 										<div class="body__overlay">
 											<a href="#" class="body__search _icon-icon-search"></a>
@@ -356,7 +356,7 @@
 									<!-- HOVER SEARCH -->
 									<div href="#" class="body__picture">
 										<a class="body__picyure-link" href="#">
-											<img src="@img/main-page/coffee.jpg" alt="Кофе с коноплей органический">
+											<img src="@img/main-page/coffee.jpg" height="215" width="298" alt="Кофе с коноплей органический">
 										</a>
 										<div class="body__overlay">
 											<a href="#" class="body__search _icon-icon-search"></a>
@@ -394,7 +394,7 @@
 									<!-- HOVER SEARCH -->
 									<div href="#" class="body__picture">
 										<a class="body__picyure-link" href="#">
-											<img src="@img/main-page/orangepepper.jpg" alt="Перец оранжевый">
+											<img src="@img/main-page/orangepepper.jpg" height="215" width="298" alt="Перец оранжевый">
 										</a>
 										<div class="body__overlay">
 											<a href="#" class="body__search _icon-icon-search"></a>
@@ -437,7 +437,7 @@
 										<!-- HOVER SEARCH -->
 										<div href="#" class="body__picture">
 											<a class="body__picyure-link" href="#">
-												<img src="@img/main-page/pineapple.jpg" alt="Ананас">
+												<img src="@img/main-page/pineapple.jpg" height="215" width="298" alt="Ананас">
 											</a>
 											<div class="body__overlay">
 												<a href="#" class="body__search _icon-icon-search"></a>
@@ -475,7 +475,7 @@
 										<!-- HOVER SEARCH -->
 										<div href="#" class="body__picture">
 											<a class="body__picyure-link" href="#">
-												<img src="@img/main-page/lemon.jpg" alt="Лимон">
+												<img src="@img/main-page/lemon.jpg" height="215" width="298" alt="Лимон">
 											</a>
 											<div class="body__overlay">
 												<a href="#" class="body__search _icon-icon-search"></a>
@@ -513,7 +513,7 @@
 										<!-- HOVER SEARCH -->
 										<div href="#" class="body__picture">
 											<a class="body__picyure-link" href="#">
-												<img src="@img/main-page/pitahaya.jpg" alt="Питахайя красная ">
+												<img src="@img/main-page/pitahaya.jpg" height="215" width="298" alt="Питахайя красная ">
 											</a>
 											<div class="body__overlay">
 												<a href="#" class="body__search _icon-icon-search"></a>
@@ -551,7 +551,7 @@
 										<!-- HOVER SEARCH -->
 										<div href="#" class="body__picture">
 											<a class="body__picyure-link" href="#">
-												<img src="@img/main-page/ketchup.jpg" alt="Кетчуп томатный детский">
+												<img src="@img/main-page/ketchup.jpg" height="215" width="298" alt="Кетчуп томатный детский">
 											</a>
 											<div class="body__overlay">
 												<a href="#" class="body__search _icon-icon-search"></a>
@@ -589,7 +589,7 @@
 										<!-- HOVER SEARCH -->
 										<div href="#" class="body__picture">
 											<a class="body__picyure-link" href="#">
-												<img src="@img/main-page/carot-card.jpg" alt="Морковь молодая ">
+												<img src="@img/main-page/carot-card.jpg" height="215" width="298" alt="Морковь молодая ">
 											</a>
 											<div class="body__overlay">
 												<a href="#" class="body__search _icon-icon-search"></a>
@@ -627,7 +627,7 @@
 										<!-- HOVER SEARCH -->
 										<div href="#" class="body__picture">
 											<a class="body__picyure-link" href="#">
-												<img src="@img/main-page/beverages.jpg" alt="Напиток сокосодержащий">
+												<img src="@img/main-page/beverages.jpg" height="215" width="298" alt="Напиток сокосодержащий">
 											</a>
 											<div class="body__overlay">
 												<a href="#" class="body__search _icon-icon-search"></a>
@@ -665,7 +665,7 @@
 										<!-- HOVER SEARCH -->
 										<div href="#" class="body__picture">
 											<a class="body__picyure-link" href="#">
-												<img src="@img/main-page/coffee.jpg" alt="Кофе с коноплей органический">
+												<img src="@img/main-page/coffee.jpg" height="215" width="298" alt="Кофе с коноплей органический">
 											</a>
 											<div class="body__overlay">
 												<a href="#" class="body__search _icon-icon-search"></a>
@@ -703,7 +703,7 @@
 										<!-- HOVER SEARCH -->
 										<div href="#" class="body__picture">
 											<a class="body__picyure-link" href="#">
-												<img src="@img/main-page/orangepepper.jpg" alt="Перец оранжевый">
+												<img src="@img/main-page/orangepepper.jpg" height="215" width="298" alt="Перец оранжевый">
 											</a>
 											<div class="body__overlay">
 												<a href="#" class="body__search _icon-icon-search"></a>
@@ -731,6 +731,354 @@
 							<span>Скыть</span>
 						</button>
 					</div>
+				</div>
+			</section>
+
+			<section class="page__stock stock">
+				<div class="stock__container">
+					<div class="stock__title title">
+						<h2 class="title__value">Акции</h2>
+					</div>
+
+					<div class="stock__box">
+						<ul class="stock__list">
+							<button type="button" data-id="all" class="stock__item tab-active">Все товары</button>
+							<button type="button" data-id="new" class="stock__item">НовИНКИ</button>
+							<button type="button" data-id="hit" class="stock__item">ХИТЫ</button>
+						</ul>
+					</div>
+
+					<div class="cards">
+
+						<div class="cards__stock new">
+							<article class="cards__card card">
+								<div class="card__picture">
+									<a class="card__picture-link" href="#">
+										<img src="@img/main-page/stock/pineapple.jpg" alt="Ананас">
+									</a>
+									<!-- Badges -->
+									<div class="badge__stock badge__stock_position">
+										<span class="badge__card badge__card_new">НОВИНКА</span>
+										<span class="badge__card badge__card_hit sr-only">ХИТ</span>
+									</div>
+									<!-- Badges -->
+								</div>
+
+								<div class="card__block">
+									<div class="card__heading">
+										<a href="#" class="card__title"> <span>Ананас, 1кг </span></a>
+									</div>
+									<div class="card__footer">
+
+										<div class="card__description">
+											<span class="card__have">В НАЛИЧИИ</span>
+											<span class="card__end sr-only">ЗАКАНЧИВАЕТСЯ</span>
+											<span class="card__not sr-only">НЕТ В НАЛИЧИИ</span>
+										</div>
+										<div class="card__items">
+											<div class="card__all-price">
+												<span class="card__price card__price_rub">999</span>
+												<span class="card__old-price card__old-price_rub">1999</span>
+											</div>
+
+											<div class="rating-stock">
+												<span>4.5</span>
+											</div>
+										</div>
+									</div>
+								</div>
+							</article>
+						</div>
+
+						<div class="cards__stock new">
+							<article class="cards__card card">
+								<div class="card__picture">
+									<a class="card__picture-link" href="#">
+										<img src="@img/main-page/stock/coffee.jpg" alt="Кофе с коноплей органический">
+									</a>
+									<!-- Badges -->
+									<div class="badge__stock badge__stock_position">
+										<span class="badge__card badge__card_new">НОВИНКА</span>
+										<span class="badge__card badge__card_hit sr-only">ХИТ</span>
+									</div>
+									<!-- Badges -->
+								</div>
+
+								<div class="card__block">
+									<div class="card__heading">
+										<a href="#" class="card__title"> <span>Кофе с коноплей органический Caffé Salomoni 250г</span></a>
+									</div>
+									<div class="card__footer">
+
+										<div class="card__description">
+											<span class="card__have sr-only">В НАЛИЧИИ</span>
+											<span class="card__end">ЗАКАНЧИВАЕТСЯ</span>
+											<span class="card__not sr-only">НЕТ В НАЛИЧИИ</span>
+										</div>
+										<div class="card__items">
+											<div class="card__all-price">
+												<span class="card__price card__price_rub">777</span>
+												<span class="card__old-price card__old-price_rub">877</span>
+											</div>
+
+											<div class="rating-stock">
+												<span>4.9</span>
+											</div>
+										</div>
+									</div>
+								</div>
+							</article>
+						</div>
+
+						<div class="cards__stock new">
+							<article class="cards__card card">
+								<div class="card__picture">
+									<a class="card__picture-link" href="#">
+										<img src="@img/main-page/stock/strawberry.jpg" alt="Клубника">
+									</a>
+									<!-- Badges -->
+									<div class="badge__stock badge__stock_position">
+										<span class="badge__card badge__card_new">НОВИНКА</span>
+										<span class="badge__card badge__card_hit sr-only">ХИТ</span>
+									</div>
+									<!-- Badges -->
+								</div>
+
+								<div class="card__block">
+									<div class="card__heading">
+										<a href="#" class="card__title"><span>Клубника, 1 кг</span></a>
+									</div>
+									<div class="card__footer">
+
+										<div class="card__description">
+											<span class="card__have sr-only">В НАЛИЧИИ</span>
+											<span class="card__end sr-only">ЗАКАНЧИВАЕТСЯ</span>
+											<span class="card__not">НЕТ В НАЛИЧИИ</span>
+										</div>
+										<div class="card__items">
+											<div class="card__all-price">
+												<span class="card__price card__price_rub">440</span>
+												<span class="card__old-price card__old-price_rub">600</span>
+											</div>
+
+											<div class="rating-stock">
+												<span>5</span>
+											</div>
+										</div>
+									</div>
+								</div>
+							</article>
+						</div>
+
+						<div class="cards__stock new">
+							<article class="cards__card card">
+								<div class="card__picture">
+									<a class="card__picture-link" href="#">
+										<img src="@img/main-page/stock/mango.jpg" alt="Манго">
+									</a>
+									<!-- Badges -->
+									<div class="badge__stock badge__stock_position">
+										<span class="badge__card badge__card_new">НОВИНКА</span>
+										<span class="badge__card badge__card_hit sr-only">ХИТ</span>
+									</div>
+									<!-- Badges -->
+								</div>
+
+								<div class="card__block">
+									<div class="card__heading">
+										<a href="#" class="card__title"><span>Манго, 1 шт</span></a>
+									</div>
+									<div class="card__footer">
+
+										<div class="card__description">
+											<span class="card__have">В НАЛИЧИИ</span>
+											<span class="card__end sr-only">ЗАКАНЧИВАЕТСЯ</span>
+											<span class="card__not sr-only">НЕТ В НАЛИЧИИ</span>
+										</div>
+										<div class="card__items">
+											<div class="card__all-price">
+												<span class="card__price card__price_rub">660</span>
+												<span class="card__old-price card__old-price_rub">960</span>
+											</div>
+
+											<div class="rating-stock">
+												<span>5</span>
+											</div>
+										</div>
+									</div>
+								</div>
+							</article>
+						</div>
+
+						<div class="cards__stock new">
+							<article class="cards__card card">
+								<div class="card__picture">
+									<a class="card__picture-link" href="#">
+										<img src="@img/main-page/stock/fish.jpg" alt="Лосось">
+									</a>
+									<!-- Badges -->
+									<div class="badge__stock badge__stock_position">
+										<span class="badge__card badge__card_new">НОВИНКА</span>
+										<span class="badge__card badge__card_hit sr-only">ХИТ</span>
+									</div>
+									<!-- Badges -->
+								</div>
+
+								<div class="card__block">
+									<div class="card__heading">
+										<a href="#" class="card__title"><span>Лосось, 1 кг</span></a>
+									</div>
+									<div class="card__footer">
+
+										<div class="card__description">
+											<span class="card__have">В НАЛИЧИИ</span>
+											<span class="card__end sr-only">ЗАКАНЧИВАЕТСЯ</span>
+											<span class="card__not sr-only">НЕТ В НАЛИЧИИ</span>
+										</div>
+										<div class="card__items">
+											<div class="card__all-price">
+												<span class="card__price card__price_rub">999</span>
+												<span class="card__old-price card__old-price_rub">1199</span>
+											</div>
+
+											<div class="rating-stock">
+												<span>4.5</span>
+											</div>
+										</div>
+									</div>
+								</div>
+							</article>
+						</div>
+
+						<div class="cards__stock hit">
+							<article class="cards__card card">
+								<div class="card__picture">
+									<a class="card__picture-link" href="#">
+										<img src="@img/main-page/stock/veg-juice.jpg" alt="Сок Granini овощной 100%">
+									</a>
+									<!-- Badges -->
+									<div class="badge__stock badge__stock_position">
+										<span class="badge__card badge__card_new sr-only">НОВИНКА</span>
+										<span class="badge__card badge__card_hit">ХИТ</span>
+									</div>
+									<!-- Badges -->
+								</div>
+
+								<div class="card__block">
+									<div class="card__heading">
+										<a href="#" class="card__title"><span>Сок Granini овощной 100%, 0.5л</span></a>
+									</div>
+									<div class="card__footer">
+
+										<div class="card__description">
+											<span class="card__have sr-only">В НАЛИЧИИ</span>
+											<span class="card__end">ЗАКАНЧИВАЕТСЯ</span>
+											<span class="card__not sr-only">НЕТ В НАЛИЧИИ</span>
+										</div>
+										<div class="card__items">
+											<div class="card__all-price">
+												<span class="card__price card__price_rub">180</span>
+												<span class="card__old-price card__old-price_rub">230</span>
+											</div>
+
+											<div class="rating-stock">
+												<span>4.9</span>
+											</div>
+										</div>
+									</div>
+								</div>
+							</article>
+						</div>
+
+						<div class="cards__stock hit">
+							<article class="cards__card card">
+								<div class="card__picture">
+									<a class="card__picture-link" href="#">
+										<img src="@img/main-page/stock/fruit-basket.jpg" alt="Фруктовая корзина">
+									</a>
+									<!-- Badges -->
+									<div class="badge__stock badge__stock_position">
+										<span class="badge__card badge__card_new sr-only">НОВИНКА</span>
+										<span class="badge__card badge__card_hit">ХИТ</span>
+									</div>
+									<!-- Badges -->
+								</div>
+
+								<div class="card__block">
+									<div class="card__heading">
+										<a href="#" class="card__title"><span>Фруктовая корзина, 1 шт</span></a>
+									</div>
+									<div class="card__footer">
+
+										<div class="card__description">
+											<span class="card__have">В НАЛИЧИИ</span>
+											<span class="card__end sr-only">ЗАКАНЧИВАЕТСЯ</span>
+											<span class="card__not sr-only">НЕТ В НАЛИЧИИ</span>
+										</div>
+										<div class="card__items">
+											<div class="card__all-price">
+												<span class="card__price card__price_rub">3990</span>
+												<span class="card__old-price card__old-price_rub">5990</span>
+											</div>
+
+											<div class="rating-stock">
+												<span>4.8</span>
+											</div>
+										</div>
+									</div>
+								</div>
+							</article>
+						</div>
+
+						<div class="cards__stock hit">
+							<article class="cards__card card">
+								<div class="card__picture">
+									<a class="card__picture-link" href="#">
+										<img src="@img/main-page/stock/pork.jpg" alt="Свинина мякоть">
+									</a>
+									<!-- Badges -->
+									<div class="badge__stock badge__stock_position">
+										<span class="badge__card badge__card_new sr-only">НОВИНКА</span>
+										<span class="badge__card badge__card_hit">ХИТ</span>
+									</div>
+									<!-- Badges -->
+								</div>
+
+								<div class="card__block">
+									<div class="card__heading">
+										<a href="#" class="card__title"><span>Свинина мякоть, 1 кг</span></a>
+									</div>
+									<div class="card__footer">
+
+										<div class="card__description">
+											<span class="card__have">В НАЛИЧИИ</span>
+											<span class="card__end sr-only">ЗАКАНЧИВАЕТСЯ</span>
+											<span class="card__not sr-only">НЕТ В НАЛИЧИИ</span>
+										</div>
+										<div class="card__items">
+											<div class="card__all-price">
+												<span class="card__price card__price_rub">499</span>
+												<span class="card__old-price card__old-price_rub">599</span>
+											</div>
+
+											<div class="rating-stock">
+												<span>4.6</span>
+											</div>
+										</div>
+									</div>
+								</div>
+							</article>
+						</div>
+
+					</div>
+
+					<div data-showmore class="block">
+						<div data-showmore-content class="block__content">
+
+						</div>
+						<button hidden data-showmore-button type="button" class="block__more button button_green"><span>Показать еще</span><span>Скыть</span></button>
+					</div>
+
 				</div>
 			</section>
 
