feat: add section brands

--- a/freshock/src/html/_common.html
+++ b/freshock/src/html/_common.html
@@ -32,4 +32,7 @@
 		<button type="button" class="swiper-pagination slider-quality__pagging"></button>
 	</div>
 </div>
-<!--  -->
+<!-- SVG SPRITE -->
+<svg>
+	<use xlink:href="@img/icons/icons.svg#svg-coca-cola"></use>
+</svg>
