--- a/freshock/src/index.html
+++ b/freshock/src/index.html
@@ -734,6 +734,12 @@
 				</div>
 			</section>
 
+			<section class="page__banners banners">
+				<div class="banners__container">
+
+				</div>
+			</section>
+
 			<section class="page__stock stock">
 				<div class="stock__container">
 					<div class="stock__title title">
@@ -1077,6 +1083,128 @@
 
 						</div>
 						<button hidden data-showmore-button type="button" class="block__more button button_green"><span>Показать еще</span><span>Скыть</span></button>
+					</div>
+
+				</div>
+			</section>
+
+			<section class="page__brands brands">
+				<div class="brands__container">
+
+					<div class="brands__slider swiper">
+						<div class="brands__wrapper swiper-wrapper">
+
+							<div class="brands__slide swiper-slide">
+								<a href="#" class="brands__icon">
+									<svg class="brands__svg-sprite">
+										<use xlink:href="@img/icons/icons.svg#svg-sprite"></use>
+									</svg>
+								</a>
+							</div>
+
+							<div class="brands__slide swiper-slide">
+								<a href="#" class="brands__icon">
+									<svg class="brands__svg-dr-pepper">
+										<use xlink:href="@img/icons/icons.svg#svg-dr-pepper"></use>
+									</svg>
+								</a>
+							</div>
+
+							<div class="brands__slide swiper-slide">
+								<a href="#" class="brands__icon">
+									<svg class="brands__svg-coca-cola">
+										<use xlink:href="@img/icons/icons.svg#svg-coca-cola"></use>
+									</svg>
+								</a>
+							</div>
+
+							<div class="brands__slide swiper-slide">
+								<a href="#" class="brands__icon">
+									<svg class="brands__svg-pepsi">
+										<use xlink:href="@img/icons/icons.svg#svg-pepsi"></use>
+									</svg>
+								</a>
+							</div>
+
+							<div class="brands__slide swiper-slide">
+								<a href="#" class="brands__icon">
+									<svg class="brands__svg-redbull">
+										<use xlink:href="@img/icons/icons.svg#svg-redbull"></use>
+									</svg>
+								</a>
+							</div>
+
+							<div class="brands__slide swiper-slide">
+								<a href="#" class="brands__icon">
+									<svg class="brands__svg-fanta">
+										<use xlink:href="@img/icons/icons.svg#svg-fanta"></use>
+									</svg>
+								</a>
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</section>
+
+			<section class="page__news news">
+				<div class="news__container">
+
+					<div class="news__header">
+						<div class="news__title title title_text-left">
+							<h2 class="title__value">НАШИ НОВОСТИ</h2>
+						</div>
+
+						<div class="news__all">
+							<a href="#" class="news__all-link">ВСЕ НОВОСТИ</a>
+						</div>
+					</div>
+
+					<div class="news__body">
+						<article class="news__card">
+							<a href="#" class="news__picture">
+								<img src="@img/main-page/news-block/news-1.jpg" alt="Наши новости">
+								<div class="news__decor">
+									<span class="news__month">ИЮЛЬ</span>
+									<span class="news__date">15</span>
+								</div>
+							</a>
+							<div class="news__description">
+								<a href="#" class="news__link-text">
+									Событие этого лета: распродажа сезонных фруктов в онлайн-маркете ФрешОК. Торопись, пока всё не разобрали!
+								</a>
+							</div>
+						</article>
+
+						<article class="news__card">
+							<a href="#" class="news__picture">
+								<img src="@img/main-page/news-block/news-2.jpg" alt="Наши новости">
+								<div class="news__decor">
+									<span class="news__month">МАЙ</span>
+									<span class="news__date">07</span>
+								</div>
+							</a>
+							<div class="news__description">
+								<a href="#" class="news__link-text">
+									Шикарнейший выбор манго в нашем онлайн-маркете
+								</a>
+							</div>
+						</article>
+
+						<article class="news__card">
+							<a href="3" class="news__picture">
+								<img src="@img/main-page/news-block/news-3.jpg" alt="Наши новости">
+								<div class="news__decor">
+									<span class="news__month">ФЕВРАЛЬ</span>
+									<span class="news__date">20</span>
+								</div>
+							</a>
+							<div class="news__description">
+								<a href="#" class="news__link-text">
+									Всё, что вы хотели знать о папайя
+								</a>
+							</div>
+						</article>
 					</div>
 
 				</div>
