feat: add section brands

--- a/freshock/index.html
+++ b/freshock/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221222174055">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221223154900">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -881,6 +881,12 @@
 				</div>
 			</section>
 
+			<section class="page__banners banners">
+				<div class="banners__container">
+
+				</div>
+			</section>
+
 			<section class="page__stock stock">
 				<div class="stock__container">
 					<div class="stock__title title">
@@ -1229,6 +1235,128 @@
 				</div>
 			</section>
 
+			<section class="page__brands brands">
+				<div class="brands__container">
+
+					<div class="brands__slider swiper">
+						<div class="brands__wrapper swiper-wrapper">
+
+							<div class="brands__slide swiper-slide">
+								<a href="#" class="brands__icon">
+									<svg class="brands__svg-sprite">
+										<use xlink:href="img/icons/icons.svg#svg-sprite"></use>
+									</svg>
+								</a>
+							</div>
+
+							<div class="brands__slide swiper-slide">
+								<a href="#" class="brands__icon">
+									<svg class="brands__svg-dr-pepper">
+										<use xlink:href="img/icons/icons.svg#svg-dr-pepper"></use>
+									</svg>
+								</a>
+							</div>
+
+							<div class="brands__slide swiper-slide">
+								<a href="#" class="brands__icon">
+									<svg class="brands__svg-coca-cola">
+										<use xlink:href="img/icons/icons.svg#svg-coca-cola"></use>
+									</svg>
+								</a>
+							</div>
+
+							<div class="brands__slide swiper-slide">
+								<a href="#" class="brands__icon">
+									<svg class="brands__svg-pepsi">
+										<use xlink:href="img/icons/icons.svg#svg-pepsi"></use>
+									</svg>
+								</a>
+							</div>
+
+							<div class="brands__slide swiper-slide">
+								<a href="#" class="brands__icon">
+									<svg class="brands__svg-redbull">
+										<use xlink:href="img/icons/icons.svg#svg-redbull"></use>
+									</svg>
+								</a>
+							</div>
+
+							<div class="brands__slide swiper-slide">
+								<a href="#" class="brands__icon">
+									<svg class="brands__svg-fanta">
+										<use xlink:href="img/icons/icons.svg#svg-fanta"></use>
+									</svg>
+								</a>
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</section>
+
+			<section class="page__news news">
+				<div class="news__container">
+
+					<div class="news__header">
+						<div class="news__title title title_text-left">
+							<h2 class="title__value">НАШИ НОВОСТИ</h2>
+						</div>
+
+						<div class="news__all">
+							<a href="#" class="news__all-link">ВСЕ НОВОСТИ</a>
+						</div>
+					</div>
+
+					<div class="news__body">
+						<article class="news__card">
+							<a href="#" class="news__picture">
+								<picture><source srcset="img/main-page/news-block/news-1.webp" type="image/webp"><img src="img/main-page/news-block/news-1.jpg" alt="Наши новости"></picture>
+								<div class="news__decor">
+									<span class="news__month">ИЮЛЬ</span>
+									<span class="news__date">15</span>
+								</div>
+							</a>
+							<div class="news__description">
+								<a href="#" class="news__link-text">
+									Событие этого лета: распродажа сезонных фруктов в онлайн-маркете ФрешОК. Торопись, пока всё не разобрали!
+								</a>
+							</div>
+						</article>
+
+						<article class="news__card">
+							<a href="#" class="news__picture">
+								<picture><source srcset="img/main-page/news-block/news-2.webp" type="image/webp"><img src="img/main-page/news-block/news-2.jpg" alt="Наши новости"></picture>
+								<div class="news__decor">
+									<span class="news__month">МАЙ</span>
+									<span class="news__date">07</span>
+								</div>
+							</a>
+							<div class="news__description">
+								<a href="#" class="news__link-text">
+									Шикарнейший выбор манго в нашем онлайн-маркете
+								</a>
+							</div>
+						</article>
+
+						<article class="news__card">
+							<a href="3" class="news__picture">
+								<picture><source srcset="img/main-page/news-block/news-3.webp" type="image/webp"><img src="img/main-page/news-block/news-3.jpg" alt="Наши новости"></picture>
+								<div class="news__decor">
+									<span class="news__month">ФЕВРАЛЬ</span>
+									<span class="news__date">20</span>
+								</div>
+							</a>
+							<div class="news__description">
+								<a href="#" class="news__link-text">
+									Всё, что вы хотели знать о папайя
+								</a>
+							</div>
+						</article>
+					</div>
+
+				</div>
+			</section>
+
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
@@ -1329,7 +1457,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20221222174055"></script>
+	<script src="js/app.min.js?_v=20221223154900"></script>
 </body>
 
 </html>
