--- a/freshock/src/index.html
+++ b/freshock/src/index.html
@@ -737,6 +737,47 @@
 			<section class="page__banners banners">
 				<div class="banners__container">
 
+					<div class="banners__row">
+						<div class="banners__column">
+							<div class="banners__picture">
+								<img class="banners__image banners__image_big" src="@img/main-page/banners/fruits.jpg" alt="перейти к покупкам">
+								<div class="banners__content">
+									<h4 class="banners__title banners__title_color-white">СВЕЖАЙШИЕ ФРУКТЫ</h4>
+									<p class="banners__sub-title banners__sub-title_color-white">
+										НАЧНИ ФРУКТОВОЕ ЛЕТО ВСЕГО От 99 ₽
+									</p>
+									<a href="#" class="banners__link banners__link_color-white">ПЕРЕЙТИ К ПОКУПКАМ</a>
+								</div>
+							</div>
+						</div>
+
+
+						<div class="banners__column">
+							<div class="banners__picture">
+								<img class="banners__image" src="@img/main-page/banners/vegan.jpg" alt="перейти к покупкам">
+								<div class="banners__content">
+									<h4 class="banners__title">СЕЗОННАЯ РАСПРОДАЖА</h4>
+									<p class="banners__sub-title">
+										ОВОЩЕПАД ДО -50%
+									</p>
+									<a href="#" class="banners__link">ПЕРЕЙТИ К ПОКУПКАМ</a>
+								</div>
+							</div>
+						</div>
+
+						<div class="banners__column">
+							<div class="banners__picture">
+								<img class="banners__image" src="@img/main-page/banners/bread.jpg" alt="перейти к покупкам">
+								<div class="banners__content">
+									<h4 class="banners__title">НЯМ-НЯМ</h4>
+									<p class="banners__sub-title">
+										СВЕЖИЙ ХЛЕБЧИК
+									</p>
+									<a href="#" class="banners__link">ПЕРЕЙТИ К ПОКУПКАМ</a>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</section>
 
