feat: add section banners

--- a/freshock/index.html
+++ b/freshock/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221223154900">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221226121327">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -884,6 +884,47 @@
 			<section class="page__banners banners">
 				<div class="banners__container">
 
+					<div class="banners__row">
+						<div class="banners__column">
+							<div class="banners__picture">
+								<picture><source srcset="img/main-page/banners/fruits.webp" type="image/webp"><img class="banners__image banners__image_big" src="img/main-page/banners/fruits.jpg" alt="перейти к покупкам"></picture>
+								<div class="banners__content">
+									<h4 class="banners__title banners__title_color-white">СВЕЖАЙШИЕ ФРУКТЫ</h4>
+									<p class="banners__sub-title banners__sub-title_color-white">
+										НАЧНИ ФРУКТОВОЕ ЛЕТО ВСЕГО От 99 ₽
+									</p>
+									<a href="#" class="banners__link banners__link_color-white">ПЕРЕЙТИ К ПОКУПКАМ</a>
+								</div>
+							</div>
+						</div>
+
+
+						<div class="banners__column">
+							<div class="banners__picture">
+								<picture><source srcset="img/main-page/banners/vegan.webp" type="image/webp"><img class="banners__image" src="img/main-page/banners/vegan.jpg" alt="перейти к покупкам"></picture>
+								<div class="banners__content">
+									<h4 class="banners__title">СЕЗОННАЯ РАСПРОДАЖА</h4>
+									<p class="banners__sub-title">
+										ОВОЩЕПАД ДО -50%
+									</p>
+									<a href="#" class="banners__link">ПЕРЕЙТИ К ПОКУПКАМ</a>
+								</div>
+							</div>
+						</div>
+
+						<div class="banners__column">
+							<div class="banners__picture">
+								<picture><source srcset="img/main-page/banners/bread.webp" type="image/webp"><img class="banners__image" src="img/main-page/banners/bread.jpg" alt="перейти к покупкам"></picture>
+								<div class="banners__content">
+									<h4 class="banners__title">НЯМ-НЯМ</h4>
+									<p class="banners__sub-title">
+										СВЕЖИЙ ХЛЕБЧИК
+									</p>
+									<a href="#" class="banners__link">ПЕРЕЙТИ К ПОКУПКАМ</a>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</section>
 
@@ -1457,7 +1498,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20221223154900"></script>
+	<script src="js/app.min.js?_v=20221226121327"></script>
 </body>
 
 </html>
